GRASS ASCII file format support
git-svn-id: svn://localhost/trunk@778 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -1,2 +1,3 @@
 surfit 2.1
 	+ added input/output of GMT maps (CDF format) : surf_load_gmt and surf_save_gmt commands
+	+ added input/output of GRASS maps (ASCII format) : surf_load_grass and surf_save_grass commands
