anisotropic (D1 with faults)
git-svn-id: svn://localhost/trunk@805 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -7,3 +7,6 @@ surfit 2.1
 		curv_load_shp curvs_load_shp curv_save_shp
 		area_load_shp areas_load_shp area_save_shp
 		cntr_load_shp cntrs_load_shp cntr_save_shp
+	+ added anisotropy for completer
+
+	* small bugfix with taking faults into account
