--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -1,3 +1,9 @@
+surfit 2.2 changes:
+
+	* bugfix int pnts_read function. Allows to use various separators
+
+	+ added pnts_abs function
+
 surfit 2.1 changes:
 
 	! new module : libsurfit_io - import/export data in various formats
