--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -4,6 +4,7 @@ Bugfixes:
 	* bugfix in pnts_read function. Allows to use various separators
 	* bugfix in functions nodes_in_curv and nodes_in_curv_mask
 	* problem with loading modules more than one time
+	* bugfix in area_save_bln - rewriting file now tuned off :)
 
 New:
 	+ added pnts_abs function
