--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -1,19 +1,13 @@
 surfit 2.2 changes:
 
-Bugfixes:
-	* bugfix in pnts_read function. Allows to use various separators
+	* bugfix int pnts_read function. Allows to use various separators
 	* bugfix in functions nodes_in_curv and nodes_in_curv_mask
-	* problem with loading modules more than one time
-	* bugfix in area_save_bln - rewriting file now tuned off :)
-	* bugfix in completer functional. Now it works correctly with undefined areas
 
-New:
 	+ added pnts_abs function
 	+ added surf_filter_by_mask
 	+ added surf_filter_in_area
 	+ added surf_filter_out_area
 	+ added surf_filter_by_surf
-	+ added surf_swapxy
 
 surfit 2.1 changes:
 
