surf_load_xyz force parameter was added + small bugfix
git-svn-id: svn://localhost/trunk@1019 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/CHANGES
+++ b/surfit/CHANGES
@@ -23,6 +23,8 @@ New:
 	  from shapefiles of SHPYT_ARC type.
 
 	+ regexp and wildcards support for commands and gridding rules
+	+ added new parameter to surf_load_xyz function. Allows to force binding points 
+          to grid cells.
 
 surfit 2.1 changes:
 
