--- a/surfit/src/surfit/tex/f_cntr_smooth.tex
+++ b/surfit/src/surfit/tex/f_cntr_smooth.tex
@@ -12,6 +12,14 @@
 \renewcommand{\labelenumi}{$\bullet$}
 
 \begin{document}
+
+\begin{figure*}[!htbp]
+\begin{center}
+\includegraphics*[]{matr_sect.eps}
+\end{center}
+%\caption{Карта кровли продуктивного пласта D5.}
+\end{figure*}
+
 Problem: we need to approximate isoline with cell values. To do
 this we add specific condition to system of linear equations:
 \begin{equation}\label{phi_0}
