--- a/surfit/debian/changelog
+++ b/surfit/debian/changelog
@@ -1,6 +1,6 @@
-surfit (3.0-1) unstable; urgency=low
+surfit (3.0-1) stable; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release 
 
  -- Mikhail Dmitrievsky <mdmitr@gmail.com>  Mon,  3 Dec 2007 14:57:34 +0900
 
